change it again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Katherine Isabela Hsiung Chen — Pole Position 🏁 </title>
+  <title>Katherine Isabela Hsiung Chen — Pole Position 🏁</title>
+  <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='58%25' font-family='Georgia, serif' font-size='36' font-weight='700' text-anchor='middle' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
+  <link rel="alternate icon" href="data:image/png;base64,iVBORw0KGgo=">
   <meta name="description" content="Katherine's pastel portfolio with classy headings, F1 theme toggles, and project showcases." />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -19,14 +22,14 @@
 
       --rad:16px; --pad:16px; --shadow:0 10px 24px rgba(12,21,33,.08),0 2px 6px rgba(12,21,33,.05);
       --maxw:1080px;
-    }
 
+      --footer-h:64px;
+    }
     :root[data-theme="carlos"]{
       --bg:#dbe6ff; --surface:#ffffff; --surface-2:#e0e9ff;
       --text:#0b1220; --muted:#3f527a; --ring:rgba(0,0,0,.12);
       --accent:#0d347e;
     }
-
     :root[data-theme="lando"] #projects {
       background: rgba(20,20,20,0.6);
       border-radius: 20px;
@@ -34,17 +37,16 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.4);
       backdrop-filter: blur(6px);
     }
-
     :root[data-theme="lando"] .card h3,
     :root[data-theme="lando"] .card p,
     :root[data-theme="lando"] .tag { color:#f1f1f1; }
-
     :root[data-theme="lando"] .tag {
       background: color-mix(in oklab, var(--accent) 40%, #222);
       border-color:#444;
     }
 
     *{box-sizing:border-box}
+    html, body { height:100%; }
     body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
 
     h1,h2,h3{font-family:"Playfair Display",Georgia,"Times New Roman",serif;letter-spacing:.2px}
@@ -58,7 +60,7 @@
 
     header.site{position:sticky;top:0;z-index:10;background:color-mix(in oklab,var(--bg) 86%,transparent);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
     .site-inner{display:flex;align-items:center;justify-content:space-between;height:64px}
-    .brand{display:flex;gap:10px;align-items:center;font-weight:800}
+    .brand{display:flex;gap:14px;align-items:center;font-weight:800}
     .brand .badge{width:28px;height:28px;border-radius:8px;background:linear-gradient(135deg,var(--sage),var(--sky))}
     nav a{margin-left:14px;font-weight:600}
 
@@ -75,13 +77,14 @@
 
     :root[data-theme="lando"] .hero{background:linear-gradient(180deg,#111 0%,#0c0c0d 100%)}
 
-    .hero h1{margin:0 0 8px;font-size:clamp(28px,5vw,48px)}
+    .hero .container{ text-align:center; display:grid; place-items:center; }
+    .hero h1{margin:0 0 8px;font-size:clamp(28px,5vw,48px); max-width:940px; margin-left:auto; margin-right:auto;}
 
-    .chips{display:flex;gap:10px;flex-wrap:wrap;margin:12px 0 16px}
+    .chips{display:flex;gap:10px;flex-wrap:wrap;margin:12px 0 16px; justify-content:center}
     .chip{--c:var(--sage);padding:8px 12px;border:1px solid var(--ring);border-radius:999px;background:color-mix(in oklab,var(--c) 28%,white);font-weight:700}
     :root[data-theme="lando"] .chip{background:color-mix(in oklab,var(--accent) 12%,#1b1b1e);color:#f1f1f1;border-color:#333}
 
-    .driver-bar{display:flex;align-items:center;gap:10px;color:var(--muted);flex-wrap:wrap}
+    .driver-bar{display:flex;align-items:center;gap:10px;color:var(--muted);flex-wrap:wrap; justify-content:center}
 
     .btn{appearance:none;border:1px solid var(--btn-border);background:var(--btn-bg);color:var(--btn-text);padding:10px 14px;border-radius:12px;font-weight:700;cursor:pointer;box-shadow:0 1px 0 rgba(0,0,0,.04);transition:background .2s, color .2s}
     .btn.primary{background:var(--btn-primary-bg);color:var(--btn-primary-text);border-color:#000}
@@ -98,7 +101,7 @@
 
     #confetti{position:fixed;inset:0;pointer-events:none}
 
-    footer{border-top:1px solid var(--ring);padding:18px 0;color:var(--muted);text-align:center}
+    footer{border-top:1px solid var(--ring);padding:18px 0;color:var(--muted);text-align:center;position:fixed;left:0;right:0;bottom:0;background:color-mix(in oklab,var(--bg) 86%, transparent);backdrop-filter:saturate(160%) blur(6px)}
 
     #projects{background:rgba(255,255,255,0.7);border-radius:20px;padding:32px;box-shadow:0 10px 30px rgba(0,0,0,0.05);backdrop-filter: blur(6px)}
 
@@ -177,7 +180,7 @@
     :root[data-theme="carlos"] .video-link:hover{ text-shadow:0 0 10px rgba(15,61,145,.6)}
     .disabled{opacity:.45;pointer-events:none;filter:grayscale(30%)}
 
-    /* ---------- VIEW SWITCHER + SLIDER ADDITIONS ---------- */
+    /* Views */
     body[data-view="home"] #projects,
     body[data-view="home"] #about,
     body[data-view="home"] #contact{
@@ -191,37 +194,47 @@
     body[data-view="contact"] #contact{
       opacity:1; transform:translateY(0) scale(1);
       pointer-events:auto; height:auto; margin:initial;
-      padding-top:48px; padding-bottom:48px;
+      padding-top:48px; padding-bottom:calc(48px + var(--footer-h));
     }
     body[data-view="projects"] .hero,
     body[data-view="about"] .hero,
     body[data-view="contact"] .hero{ opacity:.96; filter:saturate(.95); transition:opacity .3s ease, filter .3s ease }
 
-    .hub{display:flex;gap:12px;flex-wrap:wrap;margin-top:16px}
+    .hub{display:flex;gap:12px;flex-wrap:wrap;margin-top:16px; justify-content:center}
 
     .viewbar{display:flex;align-items:center;gap:10px;margin:-8px 0 24px}
     .viewbar .back-home{appearance:none;border:1px solid var(--btn-border);background:var(--btn-bg);color:var(--btn-text);padding:8px 12px;border-radius:10px;font-weight:700;cursor:pointer}
 
+    /* Slider container */
     .proj-slider{position:relative;overflow:hidden;border-radius:var(--rad)}
     .proj-track{display:grid;grid-auto-flow:column;grid-auto-columns:100%;transition:transform .45s cubic-bezier(.2,.7,.2,1)}
     .proj.card{margin:0}
-    .slider-nav{display:flex;justify-content:space-between;align-items:center;margin:14px 0 0}
-    .slider-btn{appearance:none;border:1px solid var(--btn-border);background:var(--btn-bg);color:var(--btn-text);padding:8px 12px;border-radius:10px;font-weight:700;cursor:pointer}
-    .slider-dots{display:flex;gap:6px;align-items:center}
+
+    /* Arrow-only overlay controls */
+    .slider-nav{position:relative;margin:0;height:0}
+    .slider-btn{
+      position:absolute; top:50%; transform:translateY(-50%);
+      width:42px; height:42px; border-radius:50%;
+      display:grid; place-items:center; font-size:22px; line-height:1;
+      appearance:none; border:1px solid var(--btn-border); background:var(--btn-bg); color:var(--btn-text);
+      font-weight:700; cursor:pointer; opacity:.9; backdrop-filter: blur(6px);
+    }
+    .slider-btn:hover{opacity:1}
+    .slider-btn.prev{left:8px}
+    .slider-btn.next{right:8px}
+
+    /* Dots under slider */
+    .slider-dots{display:flex;gap:6px;align-items:center;justify-content:center;margin-top:12px}
     .slider-dot{width:8px;height:8px;border-radius:50%;background:var(--ring)}
     .slider-dot.active{background:color-mix(in oklab,var(--accent) 60%, white)}
 
     :root[data-theme="lando"] .slider-btn{background:#2a2a2a;color:#f3f3f3;border-color:#444}
     :root[data-theme="lando"] .slider-dot{background:#333}
     :root[data-theme="lando"] .slider-dot.active{background:#ff8000}
-
-    :root[data-theme="lando"] #projects h2,
-    :root[data-theme="lando"] #about h2,
-    :root[data-theme="lando"] #contact h2{color:#ff943d}
   </style>
 </head>
 
-<body>
+<body data-view="home">
   <canvas id="confetti"></canvas>
   <header class="site">
     <div class="site-inner container">
@@ -253,7 +266,7 @@
       </div>
 
       <div class="hub">
-        <button class="btn primary hub-btn" data-view="projects">See Projects</button>
+        <button class="btn primary hub-btn" data-view="projects">My Projects</button>
         <button class="btn hub-btn" data-view="about">About</button>
         <button class="btn hub-btn" data-view="contact">Contact</button>
       </div>
@@ -272,7 +285,7 @@
         <span class="tag">Algorithms</span>
       </div>
       <p>
-        <a href="YOUR_GITHUB_LINK_CALCULATOR" target="_blank" class="code-link">💻 Code</a>
+        <a href="https://github.com/Katechen125/Calculator" target="_blank" class="code-link">💻 Code</a>
         &nbsp;•&nbsp;
         <a href="YOUR_DEMO_LINK_CALCULATOR" target="_blank" class="video-link disabled">🎥 Demo</a>
       </p>
@@ -287,7 +300,7 @@
         <span class="tag">vcpkg</span>
       </div>
       <p>
-        <a href="YOUR_GITHUB_LINK_GOL" target="_blank" class="code-link">💻 Code</a>
+        <a href="https://github.com/Katechen125/conway-s-game-of-life-05-24-Katechen125" target="_blank" class="code-link">💻 Code</a>
         &nbsp;•&nbsp;
         <a href="YOUR_DEMO_LINK_GOL" target="_blank" class="video-link disabled">🎥 Demo</a>
       </p>
@@ -302,7 +315,6 @@
         <span class="tag">Prototype</span>
       </div>
       <p>
-        <a href="#" class="code-link disabled">💻 Code</a>
         &nbsp;•&nbsp;
         <a href="YOUR_DEMO_LINK_COLLAB" target="_blank" class="video-link">🎥 Demo</a>
       </p>
@@ -318,7 +330,7 @@
         <span class="tag">Xcode (iOS)</span>
       </div>
       <p>
-        <a href="YOUR_GITHUB_LINK_PATHFINDER" target="_blank" class="code-link">💻 Code</a>
+        <a href="https://github.com/Katechen125/Pathfinder" target="_blank" class="code-link">💻 Code</a>
         &nbsp;•&nbsp;
         <a href="YOUR_DEMO_LINK_PATHFINDER" target="_blank" class="video-link disabled">🎥 Demo</a>
       </p>
@@ -334,7 +346,7 @@
         <span class="tag">Networking</span>
       </div>
       <p>
-        <a href="YOUR_GITHUB_LINK_TCP" target="_blank" class="code-link">💻 Code</a>
+        <a href="https://github.com/Katechen125/TCP-server" target="_blank" class="code-link">💻 Code</a>
         &nbsp;•&nbsp;
         <a href="YOUR_DEMO_LINK_TCP" target="_blank" class="video-link disabled">🎥 Demo</a>
       </p>
@@ -380,7 +392,7 @@
       if(rafId) cancelAnimationFrame(rafId);
       const N=300, parts=[], start=performance.now();
       for(let i=0;i<N;i++){
-        parts.push({x:Math.random()*W,y:-Math.random()*H*0.6,vx:(Math.random()*2-1)*0.8*DPR,vy:(2+Math.random()*2)*DPR,rot:Math.random()*Math.PI,vr:(Math.random()*0.2-0.1),color:colors[Math.floor(Math.random()*colors.length)],label:labels.length?labels[Math.floor(Math.random()*labels.length)]:null,useImage:useImages});
+        parts.push({x:Math.random()*W,y:-Math.random()*H*0.6,vx:(Math.random()*2-1)*0.8*DPR,vy:(2+Math.random()*2)*DPR,rot:Math.random()*Math.PI,vr:(Math.random()*0.2-0.1),color:colors[Math.floor(Math.random()*colors.length)],label:labels.length?labels[Math.floor(Math.random() * labels.length)]:null,useImage:useImages});
       }
       const easeOutCubic=t=>1-Math.pow(1-t,3), clamp01=v=>Math.max(0,Math.min(1,v));
       function tick(t){
@@ -420,7 +432,6 @@
       confettiFall({colors:['#e07b97','#6fa387','#6aa9d8'],labels:['🫀','🏎️','💻'],useImages:false,durationMs:2400,textPx:18});
     });
 
-    // ----- View switching -----
     (function(){
       const body=document.body;
       if(!body.hasAttribute('data-view')) body.setAttribute('data-view','home');
@@ -454,10 +465,18 @@
           if(sec) ensureBackBar(sec);
         });
         window.scrollTo({top:0,behavior:'smooth'});
+        history.pushState({view:name},"","#"+name);
       }
+
+      window.addEventListener('popstate', (e)=>{
+        const v=(e.state && e.state.view) || (location.hash.replace('#','')||'home');
+        body.setAttribute('data-view', v);
+      });
+
+      const initial = (location.hash.replace('#','')||'home');
+      body.setAttribute('data-view', initial);
     })();
 
-    // ----- Projects slider -----
     (function(){
       const projSec=document.getElementById('projects'); if(!projSec) return;
       const cards=Array.from(projSec.querySelectorAll('.proj.card')); if(cards.length<=1) return;
@@ -467,9 +486,9 @@
       cards.forEach(c=>track.appendChild(c)); slider.appendChild(track);
 
       const nav=document.createElement('div'); nav.className='slider-nav';
-      const prev=document.createElement('button'); prev.className='slider-btn'; prev.textContent='⟵ Prev';
+      const prev=document.createElement('button'); prev.className='slider-btn prev'; prev.setAttribute('aria-label','Previous project'); prev.textContent='‹';
       const dots=document.createElement('div'); dots.className='slider-dots';
-      const next=document.createElement('button'); next.className='slider-btn'; next.textContent='Next ⟶';
+      const next=document.createElement('button'); next.className='slider-btn next'; next.setAttribute('aria-label','Next project'); next.textContent='›';
       nav.append(prev,dots,next);
 
       const h2=projSec.querySelector('h2');
