--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,11 @@
     href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='58%25' font-family='Georgia, serif' font-size='36' font-weight='700' text-anchor='middle' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#f7faf9;--surface:#ffffff;--text:#1b1e22;--muted:#5b6471;--ring:rgba(0,0,0,.08);--accent:#6fa387;--maxw:800px}
+    :root{--bg:#f7faf9;--surface:#ffffff;--text:#1b1e22;--muted:#5b6471;--ring:rgba(0,0,0,.08);--accent:#6fa387;--maxw:880px}
     :root[data-theme="carlos"]{--bg:#dbe6ff;--surface:#ffffff;--text:#0b1220;--muted:#3f527a;--ring:rgba(0,0,0,.12);--accent:#0d347e}
     :root[data-theme="lando"]{--bg:#0f0f10;--surface:#1b1b1d;--text:#f5f7fa;--muted:#cfd5df;--ring:rgba(255,255,255,.14);--accent:#ff8000}
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
     html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none;background:
       radial-gradient(1200px 800px at 12% 0%, rgba(207,233,251,.55), transparent 60%),
       radial-gradient(1200px 800px at 90% 8%, rgba(249,201,212,.55), transparent 60%),
@@ -31,15 +32,29 @@
 
     .wrap{max-width:var(--maxw);margin:0 auto;padding:24px 18px}
     header{display:flex;gap:12px;align-items:center;justify-content:center;padding:14px 0;border-bottom:1px solid var(--ring);position:sticky;top:0;background:color-mix(in oklab,var(--bg) 86%,transparent);backdrop-filter: blur(8px);z-index:5}
+    .nav{margin-left:auto;display:flex;gap:8px}
     .btn{appearance:none;border:1px solid rgba(0,0,0,.15);background:#fff;color:#111;padding:8px 12px;border-radius:10px;font-weight:800;cursor:pointer}
     :root[data-theme="lando"] .btn{background:#2a2a2a;color:#f1f1f1;border-color:#444}
     .btn:hover{background:var(--accent);color:#fff}
-    h1,h2{font-family:"Playfair Display",Georgia,serif}
+
+    h1{font-family:"Playfair Display",Georgia,serif;margin:22px auto 14px;text-align:center;max-width:920px;padding:0 12px}
     a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
     :root[data-theme="lando"] a{color:#ff8000}
-    #confetti{position:fixed;inset:0;pointer-events:none}
-    .driver{display:flex;gap:8px;align-items:center;justify-content:center;margin-top:10px}
-    .card{background:var(--surface);border:1px solid var(--ring);border-radius:16px;padding:18px}
+
+    .driver-top{display:flex;gap:10px;justify-content:center;align-items:center;color:var(--muted);flex-wrap:wrap;margin:10px auto 14px;padding:0 12px}
+
+    .pit{background:var(--surface);border:1px solid var(--ring);border-radius:16px;padding:18px;box-shadow:0 10px 24px rgba(12,21,33,.06)}
+    .controls{display:grid;grid-template-columns:1fr 1fr;gap:14px}
+    .controls>div{background:color-mix(in oklab,var(--surface) 92%,#fff);border:1px solid var(--ring);border-radius:12px;padding:12px}
+    label{font-weight:700;display:block;margin-bottom:6px}
+    .lane{display:flex;gap:8px;flex-wrap:wrap}
+    .chip{padding:6px 10px;border-radius:999px;border:1px solid var(--ring);cursor:pointer;font-weight:700;user-select:none}
+    .chip.active{background:color-mix(in oklab,var(--accent) 22%, #fff);border-color:var(--accent)}
+    textarea{width:100%;min-height:120px;resize:vertical;border:1px solid var(--ring);border-radius:10px;padding:10px;background:#fff;color:#111;font:inherit}
+    :root[data-theme="lando"] textarea{background:#1b1b1d;color:#f5f7fa;border-color:#333}
+
+    .send{display:flex;justify-content:center;margin-top:14px}
+    .send .btn{font-size:18px;border-radius:12px}
   </style>
 </head>
 <body>
@@ -47,11 +62,7 @@
 
   <header>
     <strong>Contact</strong>
-    <div style="margin-left:auto; display:flex; gap:8px; align-items:center;">
-      <span style="color:var(--muted)">Themes:</span>
-      <button class="btn" data-theme="carlos">Carlos</button>
-      <button class="btn" data-theme="lando">Lando</button>
-      <button class="btn" id="resetTheme">Reset</button>
+    <div class="nav">
       <a class="btn" href="index.html">Home</a>
       <a class="btn" href="projects.html">Projects</a>
       <a class="btn" href="about.html">About</a>
@@ -59,18 +70,45 @@
   </header>
 
   <main class="wrap">
-    <h1>Let’s talk</h1>
-    <div class="card">
-      <p>Email: <a href="mailto:katisabela125@gmail.com">katisabela125@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/Katechen125" target="_blank" rel="noopener">@Katechen125</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/katherine-hsiung-chen-22972830b" target="_blank" rel="noopener">/in/katherine-hsiung-chen-22972830b</a></p>
-    </div>
-
-    <div class="driver">
+    <div class="driver-top">
       <span>Favorite drivers:</span>
       <button class="btn" data-theme="carlos">Carlos</button>
       <button class="btn" data-theme="lando">Lando</button>
       <button class="btn" id="resetTheme">Reset</button>
+      <span class="subtle" style="color:var(--muted)">(confetti themes)</span>
+    </div>
+
+    <h1>Pit Radio — send me your “race strategy”</h1>
+
+    <div class="pit">
+      <div class="controls">
+        <div>
+          <label>Urgency</label>
+          <input id="urgency" type="range" min="1" max="5" value="3" />
+        </div>
+        <div>
+          <label>Topic lane</label>
+          <div class="lane" id="lane">
+            <span class="chip active" data-val="Opportunity">Opportunity</span>
+            <span class="chip" data-val="Collaboration">Collaboration</span>
+            <span class="chip" data-val="Feedback">Feedback</span>
+            <span class="chip" data-val="Just saying hi">Just saying hi</span>
+          </div>
+        </div>
+        <div>
+          <label>Options</label>
+          <div class="lane" id="opts">
+            <span class="chip" data-val="Voice note ok">Voice note ok</span>
+            <span class="chip" data-val="Can follow up">Can follow up</span>
+            <span class="chip" data-val="Shareable">Shareable</span>
+          </div>
+        </div>
+        <div>
+          <label>Your message</label>
+          <textarea id="msg" placeholder="Tell me what you’re building, dreaming, or solving."></textarea>
+        </div>
+      </div>
+      <div class="send"><a id="sendBtn" class="btn">Send via Email</a></div>
     </div>
   </main>
 
@@ -92,13 +130,28 @@
         parts.forEach(p=>{if(p.y>H+40*DPR){p.y=-20*DPR;p.x=Math.random()*W;} ctx.save(); ctx.globalAlpha=a; ctx.translate(p.x,p.y); ctx.rotate(p.rot);
           if(p.useImage && p.label && logos[p.label] && logos[p.label].complete){const s=imgSize*DPR; ctx.drawImage(logos[p.label],-s/2,-s/2,s,s);}
           else if(!p.useImage && p.label){ctx.font=(textPx*DPR)+"px Playfair Display, serif"; ctx.fillStyle=p.color; ctx.fillText(p.label,-ctx.measureText(p.label).width/2,0);}
-          else {ctx.fillStyle=p.color; ctx.fillRect(-4,-4,8,8);} ctx.restore();});
+          else {ctx.fillStyle=p.color; ctx.fillRect(-4,-4,8,-8);} ctx.restore();});
         if(el<durationMs){rafId=requestAnimationFrame(tick);} else {ctx.clearRect(0,0,W,H);ctx.globalAlpha=1;rafId=null;}}
-      rafId=requestAnimationFrame(tick);}
+      rafId=requestAnimationFrame(tick);
+    }
     function setTheme(n){if(n==='carlos'){root.setAttribute('data-theme','carlos');confettiFall({colors:['#0f3d91','#ffffff'],labels:['williams','chili'],useImages:true,durationMs:2800,imgSize:22});}
       else if(n==='lando'){root.setAttribute('data-theme','lando');confettiFall({colors:['#ff8000','#0c0c0d','#ffffff'],labels:['mclaren','ln4'],useImages:true,durationMs:2800,imgSize:22});}}
     document.querySelectorAll('[data-theme]').forEach(b=>b.addEventListener('click',()=>setTheme(b.dataset.theme)));
     document.getElementById('resetTheme').addEventListener('click',()=>{root.removeAttribute('data-theme');confettiFall({colors:['#e07b97','#6fa387','#6aa9d8'],labels:['🫀','🏎️','💻'],useImages:false,durationMs:2400,textPx:18});});
+
+    const lane=document.getElementById('lane'); lane.addEventListener('click',e=>{if(e.target.classList.contains('chip')){lane.querySelectorAll('.chip').forEach(c=>c.classList.remove('active'));e.target.classList.add('active');}});
+    document.querySelectorAll('#opts .chip').forEach(c=>c.addEventListener('click',()=>c.classList.toggle('active')));
+    document.getElementById('sendBtn').addEventListener('click',()=>{
+      const urgency=document.getElementById('urgency').value;
+      const topic=(lane.querySelector('.chip.active')?.dataset.val)||'Message';
+      const opts=[...document.querySelectorAll('#opts .chip.active')].map(c=>c.dataset.val).join(' • ');
+      const msg=document.getElementById('msg').value.trim()||'(quick hello)';
+      const subject=`${topic} — U${urgency} | Katherine Pit Radio`;
+      const body=`Hi Katherine,%0D%0A%0D%0A${msg}%0D%0A%0D%0A${opts ? 'Notes: '+opts+'%0D%0A%0D%0A':''}— from your website`;
+      const mail=`mailto:katisabela125@gmail.com?subject=${encodeURIComponent(subject)}&body=${body}`;
+      window.location.href=mail;
+    });
   </script>
 </body>
 </html>
+
