Readjust design, adjust sequences

--- a/about.html
+++ b/about.html
@@ -8,26 +8,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root{--bg:#f7faf9;--surface:#fff;--ring:rgba(0,0,0,.08);--text:#15181d;--muted:#5b6471;--accent:#6fa387;--maxw:980px}
-*{box-sizing:border-box}html,body{height:100%}
+*{box-sizing:border-box}
 body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+a{color:var(--accent);text-decoration:none}a:visited{color:var(--accent)}a:focus-visible{outline:3px solid color-mix(in oklab,var(--accent) 60%, #ffffff);outline-offset:2px}
 .container{max-width:var(--maxw);margin:0 auto;padding:0 24px}
 header{position:sticky;top:0;z-index:10;background:color-mix(in oklab,var(--bg) 86%,transparent);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid var(--ring)}
 .header-inner{height:64px;display:flex;align-items:center;justify-content:space-between}
-.nav a{margin-left:14px;font-weight:700}
 .brand{display:flex;align-items:center;gap:12px;font-weight:900}
 .avatar{width:40px;height:40px;border-radius:50%;object-fit:cover;border:2px solid color-mix(in oklab,var(--accent) 40%,#fff)}
-h1{font-family:"Playfair Display",serif;font-size:clamp(28px,4vw,44px);text-align:center;margin:28px 0 6px}
-.lead{max-width:820px;margin:8px auto 18px;text-align:center;color:#2b3139}
-.grid{display:grid;grid-template-columns:1fr;gap:18px}
+.nav a{margin-left:14px;font-weight:800}
+h1{font-family:"Playfair Display",serif;font-size:clamp(28px,4vw,44px);text-align:center;margin:26px 0 10px}
+.grid{display:grid;grid-template-columns:1fr;gap:18px;margin-bottom:64px}
 .card{background:var(--surface);border:1px solid var(--ring);border-radius:16px;padding:18px 20px;box-shadow:0 10px 24px rgba(12,21,33,.08)}
-.sparky{height:120px;margin:6px auto 0;max-width:820px}
+.kv{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px}
+.kv .card h3{margin-top:6px}
+footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
 #confetti{position:fixed;inset:0;pointer-events:none}
+.trigger{position:fixed;right:14px;bottom:18px;width:48px;height:48px;border-radius:12px;border:1px solid var(--ring);background:#fff;display:grid;place-items:center;font-size:22px;cursor:pointer;box-shadow:0 8px 18px rgba(0,0,0,.15)}
+.trigger:hover{transform:translateY(-1px)}
 html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none;background:
   radial-gradient(1200px 700px at 12% 0%, color-mix(in oklab,#cfe9fb 55%, transparent), transparent 60%),
   radial-gradient(1200px 700px at 90% 8%, color-mix(in oklab,#f9c9d4 55%, transparent), transparent 60%),
   radial-gradient(1100px 740px at 0% 100%, color-mix(in oklab,#bcd6c5 60%, transparent), transparent 60%),
   linear-gradient(180deg,#fff 0%,var(--bg) 100%)}
-footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
 </style>
 </head>
 <body>
@@ -48,36 +51,41 @@ footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:v
 
 <main class="container">
   <h1>About</h1>
-  <p class="lead">I like building clean, expressive interfaces that feel a little bit human—and a little bit fast.</p>
-
-  <svg class="sparky" viewBox="0 0 800 120" xmlns="http://www.w3.org/2000/svg">
-    <path id="telemetry" d="M0,80 L60,78 120,82 180,50 240,90 300,60 360,65 420,40 480,92 540,70 600,76 660,55 720,88 780,72" fill="none" stroke="#6fa387" stroke-width="3" stroke-linecap="round"/>
-  </svg>
 
   <section class="grid">
-    <div class="card">
+    <article class="card">
       <h3>Where I’m headed</h3>
-      <p>CS now, Simulation Engineering next. I’m drawn to systems that behave—physics, UI motion, anything that can be tuned and tested like a car setup.</p>
-    </div>
-    <div class="card">
-      <h3>Tech I enjoy</h3>
-      <p>TypeScript/React Native, C++, Unreal Blueprints when it fits, and a soft spot for tools that make UX crisp: animation curves, timing, tactile states.</p>
-    </div>
-    <div class="card">
-      <h3>Why F1</h3>
-      <p>I love the mix of precision and theater. It’s how I build: pretty on the surface, disciplined under the hood.</p>
-    </div>
-    <div class="card">
+      <p>Finishing CS, moving into Simulation Engineering. I love building systems that feel alive—motion, and tiny interactions that make pixels behave like matter.</p>
+    </article>
+
+    <section class="kv">
+      <article class="card">
+        <h3>Tech I enjoy</h3>
+        <p>C++ for speed and control, TypeScript/React Native for friendly UX, and a soft spot for graphics & tool-building.</p>
+      </article>
+      <article class="card">
+        <h3>Why F1 shows up</h3>
+        <p>Iterate fast, test everything, ship improvements every lap. That rhythm shapes how I design and code.</p>
+      </article>
+    </section>
+
+    <article class="card">
       <h3>My style</h3>
-      <p>I iterate fast, explain clearly, and ship details that most people only feel. If it sparks joy and works reliably, we’re done. If not, one more lap.</p>
-    </div>
+      <p>I write tidy, readable code, then polish the feel—ease curves, color timing, and small “aha”s that make an app stick in memory.</p>
+    </article>
   </section>
 </main>
 
+<button class="trigger" id="fxBtn" title="Confetti">🏁</button>
+
 <footer> <div class="container">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div></footer>
+
 <script>
 document.getElementById('year').textContent=new Date().getFullYear();
-const path=document.getElementById('telemetry');const len=path.getTotalLength();path.style.strokeDasharray=len;path.style.strokeDashoffset=len;let dir=-1;function loop(){let t=0;function step(){t+=2;if(t>=len){dir*=-1;t=0}path.style.strokeDashoffset = dir===-1 ? (len-t) : t;requestAnimationFrame(step)}requestAnimationFrame(step)}loop();
+const cvs=document.getElementById('confetti'),ctx=cvs.getContext('2d');
+let W,H,DPR=Math.max(1,devicePixelRatio||1),rafId=null;function size(){W=cvs.width=innerWidth*DPR;H=cvs.height=innerHeight*DPR}size();addEventListener('resize',size);
+function confetti({colors=['#27ae60','#f39c12','#2980b9','#e74c3c','#8e44ad'],durationMs=2200}={}){if(rafId)cancelAnimationFrame(rafId);const N=240,parts=[],start=performance.now();for(let i=0;i<N;i++){parts.push({x:Math.random()*W,y:-Math.random()*H*.6,vx:(Math.random()*2-1)*.8*DPR,vy:(2+Math.random()*2)*DPR,rot:Math.random()*Math.PI,vr:(Math.random()*.2-.1),c:colors[Math.floor(Math.random()*colors.length)]});}function tick(t){const e=t-start;ctx.clearRect(0,0,W,H);parts.forEach(p=>{p.vy+=0.01*DPR;p.x+=p.vx;p.y+=p.vy;p.rot+=p.vr;ctx.save();ctx.translate(p.x,p.y);ctx.rotate(p.rot);ctx.fillStyle=p.c;ctx.fillRect(-4,-4,8,8);ctx.restore();});if(e<durationMs){rafId=requestAnimationFrame(tick)}else{ctx.clearRect(0,0,W,H);rafId=null}}rafId=requestAnimationFrame(tick)}
+document.getElementById('fxBtn').addEventListener('click',()=>confetti());
 </script>
 </body>
 </html>
