--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,68 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Contact — Katherine</title>
 <link rel="icon" type="image/svg+xml"
   href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#f7faf9;--surface:#fff;--ring:rgba(0,0,0,.08);--text:#15181d;--muted:#5b6471;--accent:#6fa387;--maxw:840px}
-*{box-sizing:border-box}html,body{height:100%}
+:root{--bg:#f7faf9;--surface:#fff;--ring:rgba(0,0,0,.08);--text:#15181d;--muted:#5b6471;--accent:#6fa387;--maxw:980px}
+*{box-sizing:border-box}
+html,body{height:100%}
 body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+a{color:var(--accent);text-decoration:none}
+a:visited{color:var(--accent)}
+a:focus-visible{outline:3px solid color-mix(in oklab,var(--accent) 60%, #ffffff);outline-offset:2px}
 .container{max-width:var(--maxw);margin:0 auto;padding:0 24px}
 header{position:sticky;top:0;z-index:10;background:color-mix(in oklab,var(--bg) 86%,transparent);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid var(--ring)}
 .header-inner{height:64px;display:flex;align-items:center;justify-content:space-between}
-.nav a{margin-left:14px;font-weight:700}
 .brand{display:flex;align-items:center;gap:12px;font-weight:900}
 .avatar{width:40px;height:40px;border-radius:50%;object-fit:cover;border:2px solid color-mix(in oklab,var(--accent) 40%,#fff)}
-h1{font-family:"Playfair Display",serif;font-size:clamp(28px,4vw,44px);text-align:center;margin:28px 0 6px}
-.toplinks{display:flex;gap:14px;justify-content:center;flex-wrap:wrap;margin-bottom:10px}
-.toplinks a{font-weight:800}
-.card{background:var(--surface);border:1px solid var(--ring);border-radius:16px;padding:18px 20px;box-shadow:0 10px 24px rgba(12,21,33,.08);margin:16px 0 50px}
-label{font-weight:800}
-.controls{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0 8px}
-.pill{padding:8px 12px;border:1px solid var(--ring);border-radius:999px;background:#fff;cursor:pointer}
-.pill input{display:none}
-.pill.active{background:color-mix(in oklab,var(--accent) 20%,#fff);border-color:color-mix(in oklab,var(--accent) 50%,#cfe9fb)}
-textarea{width:100%;min-height:140px;border:1px solid var(--ring);border-radius:12px;padding:12px;font:inherit}
-.actions{display:flex;gap:10px;margin-top:10px}
-button{appearance:none;border:1px solid var(--ring);background:#fff;color:#111;padding:10px 14px;border-radius:12px;font-weight:800;cursor:pointer}
-button:hover{background:var(--accent);color:#fff;border-color:transparent}
-.stage{display:flex;gap:8px;align-items:center;justify-content:center;margin-top:12px}
-.light{width:18px;height:18px;border-radius:50%;background:#2b2b2b}
-.light.on{background:#10b981;box-shadow:0 0 12px rgba(16,185,129,.6)}
+.nav a{margin-left:14px;font-weight:800}
+
+h1{font-family:"Playfair Display",serif;font-size:clamp(28px,4vw,44px);text-align:center;margin:26px 0 8px}
+.subtle{color:var(--muted);text-align:center;margin-bottom:18px}
+
+.driver-bar{display:flex;justify-content:center;gap:10px;flex-wrap:wrap;color:var(--muted);margin:8px 0 22px}
+.btn{appearance:none;border:1px solid var(--ring);background:#fff;color:#111;padding:10px 14px;border-radius:12px;font-weight:800;cursor:pointer;transition:.2s}
+.btn:hover{background:var(--accent);color:#fff;border-color:transparent}
+
+.grid{display:grid;grid-template-columns:1fr;gap:18px;margin:0 auto 68px}
+.card{background:var(--surface);border:1px solid var(--ring);border-radius:16px;padding:18px 20px;box-shadow:0 10px 24px rgba(12,21,33,.08)}
+.card h3{margin-top:6px}
+
+.links{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:10px}
+.link{display:flex;align-items:center;gap:10px;border:1px solid var(--ring);border-radius:14px;padding:12px 14px;background:#fff;font-weight:800}
+.link span{opacity:.8}
+
+.builder{display:grid;grid-template-columns:1fr;gap:14px}
+.pills{display:flex;gap:8px;flex-wrap:wrap}
+.pill{padding:8px 12px;border:1px solid var(--ring);border-radius:999px;background:#f9fbfc;font-weight:800;cursor:pointer}
+.pill.active{background:color-mix(in oklab,var(--accent) 20%, #ffffff);border-color:color-mix(in oklab,var(--accent) 40%, #93c1ac)}
+.row{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:10px}
+input[type="text"], textarea, select{width:100%;padding:10px 12px;border:1px solid var(--ring);border-radius:12px;background:#fff;font:inherit}
+textarea{min-height:110px;resize:vertical}
+.preview{white-space:pre-wrap;background:#fbfdff;border:1px dashed var(--ring);border-radius:12px;padding:12px}
+.actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:8px}
+.primary{background:var(--accent);color:#fff;border-color:transparent}
+
+footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
 #confetti{position:fixed;inset:0;pointer-events:none}
+.trigger{position:fixed;right:14px;bottom:18px;width:48px;height:48px;border-radius:12px;border:1px solid var(--ring);background:#fff;display:grid;place-items:center;font-size:22px;cursor:pointer;box-shadow:0 8px 18px rgba(0,0,0,.15)}
+.trigger:hover{transform:translateY(-1px)}
+
 html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none;background:
   radial-gradient(1200px 700px at 12% 0%, color-mix(in oklab,#cfe9fb 55%, transparent), transparent 60%),
   radial-gradient(1200px 700px at 90% 8%, color-mix(in oklab,#f9c9d4 55%, transparent), transparent 60%),
   radial-gradient(1100px 740px at 0% 100%, color-mix(in oklab,#bcd6c5 60%, transparent), transparent 60%),
   linear-gradient(180deg,#fff 0%,var(--bg) 100%)}
-footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
 </style>
 </head>
 <body>
 <canvas id="confetti"></canvas>
+
 <header>
   <div class="header-inner container">
     <div class="brand">
@@ -59,41 +79,123 @@ footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:v
 
 <main class="container">
   <h1>Contact</h1>
+  <p class="subtle">Say hi, share a brief, or send me a challenge lap.</p>
 
-  <div class="toplinks">
-    <a href="mailto:katisabela125@gmail.com">✉️ katisabela125@gmail.com</a>
-    <a href="https://github.com/Katechen125" target="_blank">🐙 GitHub</a>
-    <a href="https://www.linkedin.com/in/katherine-hsiung-chen-22972830b" target="_blank">🔗 LinkedIn</a>
+  <div class="driver-bar">
+    <span class="subtle">Favorite drivers:</span>
+    <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
+    <button class="btn" data-theme="lando">Lando Norris</button>
+    <button class="btn" id="resetTheme">Reset theme</button>
   </div>
 
-  <section class="card">
-    <label>Craft a note</label>
-    <div class="controls" id="topics">
-      <span class="pill"><input type="checkbox" value="F1">F1</span>
-      <span class="pill"><input type="checkbox" value="Health">Health</span>
-      <span class="pill"><input type="checkbox" value="Travel">Travel</span>
-      <span class="pill"><input type="checkbox" value="Simulation">Simulation</span>
-      <span class="pill"><input type="checkbox" value="Internship">Internship</span>
-    </div>
-    <textarea id="msg" placeholder="Say hi, share an idea, or pitch a problem. I’ll reply." ></textarea>
-    <div class="actions">
-      <button id="compose">Generate subject</button>
-      <a id="send" href="#" target="_blank"><button type="button">Open email</button></a>
-    </div>
-    <div class="stage"><div class="light" id="l1"></div><div class="light" id="l2"></div><div class="light" id="l3"></div></div>
+  <section class="grid">
+    <article class="card">
+      <h3>Direct</h3>
+      <div class="links">
+        <a class="link" href="mailto:katisabela125@gmail.com">✉️ <strong>Email</strong><span>katisabela125@gmail.com</span></a>
+        <a class="link" href="https://github.com/Katechen125" target="_blank" rel="noopener">💻 <strong>GitHub</strong><span>@Katechen125</span></a>
+        <a class="link" href="https://www.linkedin.com/in/katherine-hsiung-chen-22972830b" target="_blank" rel="noopener">🔗 <strong>LinkedIn</strong><span>/in/katherine-hsiung-chen-22972830b</span></a>
+      </div>
+    </article>
+
+    <article class="card">
+      <h3>Craft your message</h3>
+      <div class="builder" id="builder">
+        <div>
+          <div class="pills" data-key="reason">
+            <button class="pill">Internship</button>
+            <button class="pill">Full-time</button>
+            <button class="pill">Collab</button>
+            <button class="pill">Feedback</button>
+          </div>
+        </div>
+        <div class="row">
+          <select id="timeline">
+            <option value="this month">Timeline: this month</option>
+            <option value="next 2–3 months">Timeline: next 2–3 months</option>
+            <option value="flexible">Timeline: flexible</option>
+          </select>
+          <input id="topic" type="text" placeholder="Topic (e.g., iOS UI polish, C++ tools, simulation)"/>
+        </div>
+        <textarea id="extra" placeholder="Add context (optional)"></textarea>
+        <div>
+          <div class="preview" id="preview"></div>
+          <div class="actions">
+            <button class="btn primary" id="copyBtn">Copy</button>
+            <button class="btn" id="emailBtn">Open Email</button>
+            <button class="btn" id="clearBtn">Reset</button>
+          </div>
+        </div>
+      </div>
+    </article>
   </section>
 </main>
+
+<button class="trigger" id="fxBtn" title="Confetti">🏁</button>
 
 <footer> <div class="container">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div></footer>
 
 <script>
 document.getElementById('year').textContent=new Date().getFullYear();
-const pills=[...document.querySelectorAll('.pill')];pills.forEach(p=>p.addEventListener('click',()=>{p.classList.toggle('active');p.querySelector('input').checked=p.classList.contains('active');}));
-const l=[document.getElementById('l1'),document.getElementById('l2'),document.getElementById('l3')];
-document.getElementById('compose').addEventListener('click',()=>{l.forEach(x=>x.classList.remove('on'));setTimeout(()=>l[0].classList.add('on'),120);setTimeout(()=>l[1].classList.add('on'),260);setTimeout(()=>l[2].classList.add('on'),400);
-  const picks=pills.filter(p=>p.querySelector('input').checked).map(p=>p.textContent.trim());const sub=picks.length?`Idea: ${picks.join(' • ')}`:'Hello from your site';
-  const body=encodeURIComponent(document.getElementById('msg').value||'Hi Katherine!');
-  document.getElementById('send').href=`mailto:katisabela125@gmail.com?subject=${encodeURIComponent(sub)}&body=${body}`;
+
+const cvs=document.getElementById('confetti'),ctx=cvs.getContext('2d');
+let W,H,DPR=Math.max(1,devicePixelRatio||1),rafId=null;function size(){W=cvs.width=innerWidth*DPR;H=cvs.height=innerHeight*DPR}size();addEventListener('resize',size);
+function confetti({colors=['#27ae60','#f39c12','#2980b9','#e74c3c','#8e44ad'],durationMs=2200}={}){if(rafId)cancelAnimationFrame(rafId);const N=240,parts=[],start=performance.now();for(let i=0;i<N;i++){parts.push({x:Math.random()*W,y:-Math.random()*H*.6,vx:(Math.random()*2-1)*.8*DPR,vy:(2+Math.random()*2)*DPR,rot:Math.random()*Math.PI,vr:(Math.random()*.2-.1),c:colors[Math.floor(Math.random()*colors.length)]});}function tick(t){const e=t-start;ctx.clearRect(0,0,W,H);parts.forEach(p=>{p.vy+=0.01*DPR;p.x+=p.vx;p.y+=p.vy;p.rot+=p.vr;ctx.save();ctx.translate(p.x,p.y);ctx.rotate(p.rot);ctx.fillStyle=p.c;ctx.fillRect(-4,-4,8,8);ctx.restore();});if(e<durationMs){rafId=requestAnimationFrame(tick)}else{ctx.clearRect(0,0,W,H);rafId=null}}rafId=requestAnimationFrame(tick)}
+document.getElementById('fxBtn').addEventListener('click',()=>confetti());
+
+function themeBurst(type){
+  if(type==='carlos') confetti({colors:['#0f3d91','#ffffff']});
+  if(type==='lando') confetti({colors:['#ff8000','#0c0c0d','#ffffff']});
+}
+document.querySelectorAll('[data-theme]').forEach(b=>b.addEventListener('click',()=>themeBurst(b.dataset.theme)));
+document.getElementById('resetTheme').addEventListener('click',()=>confetti({colors:['#6fa387','#e07b97','#6aa9d8']}));
+
+const pills=document.querySelectorAll('.pills .pill');
+let state={reason:'Internship'};
+pills.forEach(p=>{
+  if(p.textContent===state.reason) p.classList.add('active');
+  p.addEventListener('click',()=>{
+    pills.forEach(x=>x.classList.remove('active'));
+    p.classList.add('active');
+    state.reason=p.textContent;
+    render();
+  });
+});
+const timeline=document.getElementById('timeline');
+const topic=document.getElementById('topic');
+const extra=document.getElementById('extra');
+[ timeline, topic, extra ].forEach(el=>el.addEventListener('input',render));
+
+function render(){
+  const t=timeline.value||'this month';
+  const top=(topic.value||'a project').trim();
+  const x=(extra.value||'').trim();
+  const msg =
+`Hi Katherine,
+
+I’m reaching out about ${state.reason.toLowerCase()} opportunities. I think your work would be a great fit for ${top}.
+Timeline: ${t}.
+
+${x ? x + "\n\n" : ""}If you’re open, I’d love to share details and compare notes.
+
+Thanks!
+— `;
+
+  document.getElementById('preview').textContent=msg;
+}
+render();
+
+document.getElementById('copyBtn').addEventListener('click',async()=>{
+  const text=document.getElementById('preview').textContent;
+  try{await navigator.clipboard.writeText(text); confetti();}catch(e){}
+});
+document.getElementById('emailBtn').addEventListener('click',()=>{
+  const subject=encodeURIComponent(`Inquiry: ${state.reason} — ${topic.value||'Project'}`);
+  const body=encodeURIComponent(document.getElementById('preview').textContent);
+  location.href=`mailto:katisabela125@gmail.com?subject=${subject}&body=${body}`;
+});
+document.getElementById('clearBtn').addEventListener('click',()=>{
+  topic.value=''; extra.value=''; timeline.selectedIndex=0; pills.forEach(x=>x.classList.remove('active')); pills[0].classList.add('active'); state.reason='Internship'; render();
 });
 </script>
 </body>
