--- a/index.html
+++ b/index.html
@@ -5,57 +5,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Katherine Isabela Hsiung Chen — Pole Position 🏁</title>
 <link rel="icon" type="image/svg+xml"
-  href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
+ href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#f7faf9;--surface:#fff;--ring:rgba(0,0,0,.08);--text:#15181d;--muted:#5b6471;--accent:#6fa387;--maxw:1080px}
-*{box-sizing:border-box}html,body{height:100%}
-body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;overflow-x:hidden}
-a{color:var(--accent);text-decoration:none}a:visited{color:var(--accent)}a:focus-visible{outline:3px solid color-mix(in oklab,var(--accent) 60%, #ffffff);outline-offset:2px}
-h1,h2{font-family:"Playfair Display",serif;text-align:center}
+:root{--bg:#f7faf9;--text:#101418;--muted:#5b6471;--accent:#6fa387;--ring:rgba(0,0,0,.08);--maxw:980px}
+*{box-sizing:border-box}
+html,body{height:100%}
+body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
 .container{max-width:var(--maxw);margin:0 auto;padding:0 24px}
 header{position:sticky;top:0;z-index:10;background:color-mix(in oklab,var(--bg) 86%,transparent);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid var(--ring)}
 .header-inner{height:64px;display:flex;align-items:center;justify-content:space-between}
 .brand{display:flex;align-items:center;gap:12px;font-weight:900}
-.avatar{width:40px;height:40px;border-radius:50%;object-fit:cover;border:2px solid color-mix(in oklab,var(--accent) 40%,#fff)}
-.nav a{margin-left:14px;font-weight:800}
-main{min-height:calc(100vh - 64px);display:grid;place-items:center}
-.hero{width:100%;display:grid;place-items:center;padding:56px 0 40px;position:relative}
-.intro{max-width:920px;margin:0 auto}
-.intro h1{font-size:clamp(28px,4.5vw,52px);margin:0 0 10px;padding:0 12px}
-.driver-bar{display:flex;justify-content:center;gap:10px;flex-wrap:wrap;color:var(--muted);margin-top:8px}
-.btn{appearance:none;border:1px solid var(--ring);background:#fff;color:#111;padding:10px 14px;border-radius:12px;font-weight:800;cursor:pointer;transition:.2s}
-.btn:hover{background:var(--accent);color:#fff;border-color:transparent}
-.hub{display:flex;gap:14px;flex-wrap:wrap;margin-top:26px;justify-content:center}
-.hub .cta{font-size:18px;padding:14px 22px;border-radius:16px;border:2px solid color-mix(in oklab,var(--accent) 45%,#89b9a5);background:#fff;font-weight:900}
-.hub .cta:hover{transform:translateY(-1px)}
-footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
-html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none;background:
-  radial-gradient(1200px 700px at 12% 0%, color-mix(in oklab,#cfe9fb 55%, transparent), transparent 60%),
-  radial-gradient(1200px 700px at 90% 8%, color-mix(in oklab,#f9c9d4 55%, transparent), transparent 60%),
-  radial-gradient(1100px 740px at 0% 100%, color-mix(in oklab,#bcd6c5 60%, transparent), transparent 60%),
+nav a{margin-left:14px;font-weight:800;color:var(--accent);text-decoration:none}
+.hero{min-height:calc(100dvh - 64px);display:grid;place-items:center;padding:24px 0;background:
+  radial-gradient(1100px 600px at 12% 0%, color-mix(in oklab,#cfe9fb 55%, transparent), transparent 60%),
+  radial-gradient(1100px 600px at 90% 8%, color-mix(in oklab,#f9c9d4 55%, transparent), transparent 60%),
+  radial-gradient(1000px 640px at 0% 100%, color-mix(in oklab,#bcd6c5 60%, transparent), transparent 60%),
   linear-gradient(180deg,#fff 0%,var(--bg) 100%)}
+h1{font-family:"Playfair Display",serif;text-align:center;margin:0 0 14px;font-size:clamp(28px,5vw,48px)}
+.subtle{color:var(--muted);text-align:center;margin:4px 0 18px}
+.driver-bar,.hub{display:flex;justify-content:center;gap:12px;flex-wrap:wrap}
+.btn{appearance:none;border:1px solid var(--ring);background:#fff;color:#111;padding:12px 16px;border-radius:14px;font-weight:800;cursor:pointer;transition:.2s}
+.btn:hover{background:var(--accent);color:#fff;border-color:transparent}
+footer{border-top:1px solid var(--ring);padding:16px 0;text-align:center;color:var(--muted)}
 #confetti{position:fixed;inset:0;pointer-events:none}
-
-.overlay{position:absolute;inset:0;display:grid;place-items:center;pointer-events:none}
-.sequence{position:relative;width:min(760px,92vw);height:240px;display:grid;place-items:center}
-.lights{display:flex;gap:18px;align-items:center;justify-content:center;opacity:0;transform:translateY(8px);transition:.25s}
-.bulb{width:74px;height:74px;border-radius:50%;background:#2b2b2b;box-shadow:inset 0 -7px 16px rgba(0,0,0,.35),0 6px 18px rgba(0,0,0,.12)}
-.bulb.on-red{background:#d80000;box-shadow:0 0 18px rgba(216,0,0,.65),inset 0 -7px 16px rgba(0,0,0,.35)}
-.bulb.on-green{background:#10b981;box-shadow:0 0 18px rgba(16,185,129,.65),inset 0 -7px 16px rgba(0,0,0,.35)}
-.flagwrap{position:absolute;inset:0;display:grid;place-items:center;opacity:0;transform:translateY(10px);transition:.25s}
-
-
-.flag-svg{width:min(340px,80vw);height:auto;filter:url(#wavy);transform-origin:left center;animation:pole-rock 4s ease-in-out infinite}
-@keyframes pole-rock{0%{transform:rotate(0deg)}50%{transform:rotate(1.5deg)}100%{transform:rotate(0deg)}}
-
-.sequence.show-lights .lights{opacity:1;transform:translateY(0)}
-.sequence.show-flag .lights{opacity:0}
-.sequence.show-flag .flagwrap{opacity:1;transform:translateY(0)}
-
-.trigger{position:fixed;right:14px;bottom:18px;width:48px;height:48px;border-radius:12px;border:1px solid var(--ring);background:#fff;display:grid;place-items:center;font-size:22px;cursor:pointer;box-shadow:0 8px 18px rgba(0,0,0,.15)}
-.trigger:hover{transform:translateY(-1px)}
-@media(max-width:520px){.bulb{width:58px;height:58px}}
 </style>
 </head>
 <body>
@@ -63,11 +36,8 @@ html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none
 
 <header>
   <div class="header-inner container">
-    <div class="brand">
-      <img class="avatar" src="assets/img/me.png" alt="Avatar">
-      <span>Katherine Isabela Hsiung Chen — Pole Position 🏁</span>
-    </div>
-    <nav class="nav">
+    <div class="brand">Katherine Isabela Hsiung Chen — Pole Position 🏁</div>
+    <nav>
       <a href="projects.html">📁 Projects</a>
       <a href="about.html">👤 About</a>
       <a href="contact.html">✉️ Contact</a>
@@ -75,86 +45,31 @@ html::before{content:"";position:fixed;inset:-25%;z-index:-1;pointer-events:none
   </div>
 </header>
 
-<main>
-  <section class="hero container">
-    <div class="overlay">
-      <div class="sequence" id="sequence">
-        <div class="lights" id="lights">
-          <div class="bulb"></div><div class="bulb"></div><div class="bulb"></div><div class="bulb"></div><div class="bulb"></div>
-        </div>
-        <div class="flagwrap">
+<main class="hero">
+  <div class="container" style="text-align:center">
+    <h1>Hi, I’m Katherine — Computer Science student (soon Simulation Engineering). I build playful-aesthetic code.</h1>
 
-          <svg class="flag-svg" viewBox="0 0 300 180" xmlns="http://www.w3.org/2000/svg">
-            <defs>
-              <pattern id="checks" width="40" height="40" patternUnits="userSpaceOnUse">
-                <rect width="40" height="40" fill="#ececec"/>
-                <rect width="20" height="20" fill="#1f1f1f"/>
-                <rect x="20" y="20" width="20" height="20" fill="#1f1f1f"/>
-              </pattern>
-              <filter id="wavy">
-                <feTurbulence type="fractalNoise" baseFrequency="0.008 0.015" numOctaves="2" seed="3">
-                  <animate attributeName="baseFrequency" dur="6s" values="0.012 0.02;0.006 0.012;0.012 0.02" repeatCount="indefinite"/>
-                </feTurbulence>
-                <feDisplacementMap in="SourceGraphic" scale="16" xChannelSelector="R" yChannelSelector="G">
-                  <animate attributeName="scale" dur="6s" values="10;18;10" repeatCount="indefinite"/>
-                </feDisplacementMap>
-              </filter>
-            </defs>
-   
-            <rect x="6" y="-6" rx="6" width="12" height="210" fill="url(#poleGrad)"/>
-            <defs>
-              <linearGradient id="poleGrad" x1="0" x2="0" y1="0" y2="1">
-                <stop offset="0%" stop-color="#bdbdbd"/><stop offset="100%" stop-color="#7c7c7c"/>
-              </linearGradient>
-            </defs>
-
-            <rect x="20" y="10" width="270" height="160" rx="12" fill="url(#checks)" stroke="#111" stroke-width="2"/>
-          </svg>
-        </div>
-      </div>
+    <div class="driver-bar" style="margin-top:8px">
+      <button class="btn" id="raceStart">🏁 Start Sequence</button>
     </div>
 
-    <div class="intro">
-      <h1>Hi, I’m Katherine — CS now, Simulation Engineering next. I build playful-aesthetic, human-centered apps.</h1>
-      <div class="driver-bar">
-        <span class="subtle">Favorite drivers:</span>
-        <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
-        <button class="btn" data-theme="lando">Lando Norris</button>
-        <button class="btn" id="resetTheme">Reset theme</button>
-      </div>
-      <div class="hub">
-        <a class="cta" href="projects.html">My Projects</a>
-        <a class="cta" href="about.html">About</a>
-        <a class="cta" href="contact.html">Contact</a>
-      </div>
+    <div class="hub" style="margin-top:18px">
+      <a class="btn" href="projects.html">My Projects</a>
+      <a class="btn" href="about.html">About</a>
+      <a class="btn" href="contact.html">Contact</a>
     </div>
-  </section>
+  </div>
 </main>
 
-<button class="trigger" id="fxBtn" title="Confetti / Replay">🏁</button>
-
-<footer>
-  <div class="container">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div>
-</footer>
+<footer><div class="container">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div></footer>
 
 <script>
 document.getElementById('year').textContent=new Date().getFullYear();
-
-
-const root=document.documentElement,cvs=document.getElementById('confetti'),ctx=cvs.getContext('2d');
-let W,H,DPR=Math.max(1,devicePixelRatio||1),rafId=null;function size(){W=cvs.width=innerWidth*DPR;H=cvs.height=innerHeight*DPR}size();addEventListener('resize',size);
-function confetti({colors=['#27ae60','#f39c12','#2980b9','#e74c3c','#8e44ad'],durationMs=2400}={}){if(rafId)cancelAnimationFrame(rafId);const N=260,parts=[],start=performance.now();for(let i=0;i<N;i++){parts.push({x:Math.random()*W,y:-Math.random()*H*.6,vx:(Math.random()*2-1)*.8*DPR,vy:(2+Math.random()*2)*DPR,rot:Math.random()*Math.PI,vr:(Math.random()*.2-.1),c:colors[Math.floor(Math.random()*colors.length)]});}function tick(t){const e=t-start;ctx.clearRect(0,0,W,H);parts.forEach(p=>{p.vy+=0.01*DPR;p.x+=p.vx;p.y+=p.vy;p.rot+=p.vr;ctx.save();ctx.translate(p.x,p.y);ctx.rotate(p.rot);ctx.fillStyle=p.c;ctx.fillRect(-4,-4,8,8);ctx.restore();});if(e<durationMs){rafId=requestAnimationFrame(tick)}else{ctx.clearRect(0,0,W,H);rafId=null}}rafId=requestAnimationFrame(tick)}
-
-function setTheme(n){if(n==='carlos'){confetti({colors:['#0f3d91','#ffffff']});}if(n==='lando'){confetti({colors:['#ff8000','#0c0c0d','#ffffff']});}}
-document.querySelectorAll('[data-theme]').forEach(b=>b.addEventListener('click',()=>setTheme(b.dataset.theme)));
-document.getElementById('resetTheme').addEventListener('click',()=>{confetti({colors:['#6fa387','#e07b97','#6aa9d8']});});
-
-const seq=document.getElementById('sequence');const bulbs=[...document.querySelectorAll('.bulb')];
-let playing=false;
-function playSequence(){playing=true;seq.classList.remove('show-flag');seq.classList.add('show-lights');bulbs.forEach(b=>b.classList.remove('on-red','on-green'));let i=0;const timer=setInterval(()=>{if(i<bulbs.length){bulbs[i].classList.add('on-red');i++;}else{clearInterval(timer);setTimeout(()=>{bulbs.forEach(b=>{b.classList.remove('on-red');b.classList.add('on-green');});confetti();setTimeout(()=>{seq.classList.remove('show-lights');seq.classList.add('show-flag');setTimeout(()=>{seq.classList.remove('show-flag');bulbs.forEach(b=>b.classList.remove('on-green'));playing=false;},2200);},650);},300);} },320);}
-playSequence();
-
-document.getElementById('fxBtn').addEventListener('click',()=>{ if(playing){confetti();} else {playSequence();} });
+</script>
+<script src="assets/js/confetti.js"></script>
+<script>
+  Confetti.init('confetti');
+  document.getElementById('raceStart').addEventListener('click', Confetti.sequence);
 </script>
 </body>
 </html>
