Forgot to add my last name

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@ footer{border-top:1px solid var(--ring);padding:18px 0;text-align:center;color:v
 </section>
 
 <footer>
-  <div class="container">© <span id="year"></span> Katherine • Built with HTML/CSS/JS • Deployed on GitHub Pages</div>
+  <div class="container">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div>
 </footer>
 
 <script src="assets/js/confetti.js"></script>
